// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SearchInput /> With ClassName should render correctly 1`] = `
<div
  className="relative flex h-full items-center justify-between"
>
  <svg
    className="pointer-events-none absolute left-3 bottom-0 top-0 m-auto"
    fill="none"
    height="28"
    viewBox="0 0 28 28"
    width="28"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M3.2267 13.1308C4.01016 14.9742 5.49385 16.431 7.35137 17.1805C9.20889 17.9301 11.2881 17.911 13.1316 17.1276C14.975 16.3441 16.4318 14.8604 17.1813 13.0029C17.9309 11.1454 17.9118 9.06617 17.1284 7.2227C16.3449 5.37922 14.8612 3.92248 13.0037 3.17294C11.1462 2.42339 9.06697 2.44244 7.2235 3.2259C5.38003 4.00936 3.92328 5.49305 3.17374 7.35057C2.42419 9.20809 2.44325 11.2873 3.2267 13.1308V13.1308Z"
      stroke="currentColor"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="1.5"
    />
    <path
      d="M15.5175 15.5166L21.375 21.3749"
      stroke="currentColor"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="1.5"
    />
  </svg>
  <input
    className="text-sierra-night-100 rounded-md bg-white p-4 placeholder:text-sierra-night-100 w-full pl-12 hover:bg-sierra-night-10 focus:bg-sierra-night-10 focus:outline-0 bg-sierra-night-10"
    id="id"
    name="name"
    onChange={[Function]}
    placeholder="placehodler"
    type="text"
    value=""
  />
</div>
`;

exports[`<SearchInput /> should render correctly 1`] = `
<div
  className="relative flex h-full items-center justify-between"
>
  <svg
    className="pointer-events-none absolute left-3 bottom-0 top-0 m-auto"
    fill="none"
    height="28"
    viewBox="0 0 28 28"
    width="28"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M3.2267 13.1308C4.01016 14.9742 5.49385 16.431 7.35137 17.1805C9.20889 17.9301 11.2881 17.911 13.1316 17.1276C14.975 16.3441 16.4318 14.8604 17.1813 13.0029C17.9309 11.1454 17.9118 9.06617 17.1284 7.2227C16.3449 5.37922 14.8612 3.92248 13.0037 3.17294C11.1462 2.42339 9.06697 2.44244 7.2235 3.2259C5.38003 4.00936 3.92328 5.49305 3.17374 7.35057C2.42419 9.20809 2.44325 11.2873 3.2267 13.1308V13.1308Z"
      stroke="currentColor"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="1.5"
    />
    <path
      d="M15.5175 15.5166L21.375 21.3749"
      stroke="currentColor"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="1.5"
    />
  </svg>
  <input
    className="text-sierra-night-100 rounded-md bg-white p-4 placeholder:text-sierra-night-100 w-full pl-12 hover:bg-sierra-night-10 focus:bg-sierra-night-10 focus:outline-0"
    id="id"
    name="name"
    onChange={[Function]}
    placeholder="placehodler"
    type="text"
    value=""
  />
</div>
`;
